add: new figure
